syntax = "proto3";
package communication;
option go_package=".;communication";

message NullResponse {}
